USBDDx-42 Ввести поле osId
Написан простенький тест web-слоя.